force-app/main/default/objects/pse__Billing_Event__c/pse__Billing_Event__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__BillingEventHelp</customHelpPage>
    <description>Contains billing event items prior to invoicing. Billings events, once released, often correspond with invoices in your financials system, with billing event items serving as invoice line items. Invoicing always occurs at the billing event level.</description>
    <label>Billing Event</label>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>