force-app/main/default/objects/pse__Billing_Event__c/fields/cer_Consolidate_Invoice__c.field-meta.xml
<CustomField>
    <fullName>cer_Consolidate_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidate Invoice</label>
    <type>Checkbox</type>
</CustomField>