force-app/main/default/objects/pse__Billing_Event__c/fields/cer_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>cer_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>