force-app/main/default/objects/pse__Billing_Event__c/fields/cer_Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>cer_Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to sales invoice used to see the payment status</description>
    <label>Sales Invoice</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>