force-app/main/default/objects/pse__Billing_Event__c/fields/CP_Approved_by_Project_Partner__c.field-meta.xml
<CustomField>
    <fullName>CP_Approved_by_Project_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true if the Billing Event is approved by the Project Partner</inlineHelpText>
    <label>Approved by Project Partner</label>
    <type>Checkbox</type>
</CustomField>