force-app/main/default/objects/pse__Billing_Event__c/fields/CT_Approval_Status_Project_Partner__c.field-meta.xml
<CustomField>
    <fullName>CT_Approval_Status_Project_Partner__c</fullName>
    <label>Approval Status (Project Partner)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by Project Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>