force-app/main/default/objects/pse__Billing_Event__c/fields/CT_Notes_for_Finance__c.field-meta.xml
<CustomField>
    <fullName>CT_Notes_for_Finance__c</fullName>
    <label>Notes for Finance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>