force-app/main/default/objects/pse__Billing_Event__c/fields/CT_Project_Partner_approval_required__c.field-meta.xml
<CustomField>
    <fullName>CT_Project_Partner_approval_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if Project Partner approval is required.</description>
    <inlineHelpText>Set to true if Project Partner approval is required.</inlineHelpText>
    <label>Project Partner approval required</label>
    <type>Checkbox</type>
</CustomField>