force-app/main/default/objects/pse__Billing_Event__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Billing_Event_Batch__c</columns>
    <columns>pse__Project__c</columns>
    <columns>ffpsai__Account__c</columns>
    <columns>pse__Date__c</columns>
    <columns>pse__Summary_Amount__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Invoiced__c</columns>
    <columns>pse__Invoice_Date__c</columns>
    <columns>pse__Invoice_Number__c</columns>
    <columns>pse__Is_Released__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>